--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="detel">
             <h1>I'm  <span class="input"> </span></h1>
             <p>This is my official Portfolio Website to showcase all my works related to <br> Web Development & Full Stack Development </p>
-            <a target="_blank" href="Sumit Pandit Resume.pdf">Download CV</a>
+            <a target="_blank" href="Resume Sumit Pandit.pdf">Download Resume</a>
         </div>
         <div class="images">
             <img src="shape.png" class="shape">
